--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -6,7 +6,7 @@ http://ionicframework.com/docs/theming/ */
 :root {
   --ion-color-nabeel: #46B3E6;
   --ion-color-nabeel-rgb: 70,179,230;
-  --ion-color-nabeel-contrast: #fff;
+  --ion-color-nabeel-contrast: #ffffff;
   --ion-color-nabeel-contrast-rgb: 0,0,0;
   --ion-color-nabeel-shade: #3e9eca;
   --ion-color-nabeel-tint: #59bbe9;
